feat: logic of variables

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -67,6 +67,8 @@ body {
   justify-content: center;
   align-items: center;
   width: 1.5em;
+  user-select: none;
+  cursor: pointer;
 }
 
 .tape-state {
